@@ -30,9 +30,12 @@
 
 struct vcf_streamer : public hts_streamer
 {
+    /// \param isRequireNormalized - if true and exception is thrown for any input variant records which are not
+    ///                              left shifted
     vcf_streamer(
         const char* filename,
-        const char* region);
+        const char* region,
+        const bool isRequireNormalized = true);
 
     ~vcf_streamer();
 
@@ -57,11 +60,8 @@ struct vcf_streamer : public hts_streamer
     validateBamHeaderChromSync(
         const bam_hdr_t& header) const;
 
-    void requireNormalized() {_requireNormalized = true;}
-    void noRequireNormalized() {_requireNormalized = false;}
-
 private:
     bcf_hdr_t* _hdr;
     vcf_record _vcfrec;
-    bool _requireNormalized;
+    bool _isRequireNormalized;
 };
